--- a/src/assets/scss/argon-design-system/mixins/background-variant.scss
+++ b/src/assets/scss/argon-design-system/mixins/background-variant.scss
@@ -1,36 +1,36 @@
-// // Contextual backgrounds
-// @mixin bg-variant($parent, $color) {
-//   #{$parent} {
-//     background-color: $color !important;
-//   }
-//   a#{$parent},
-//   button#{$parent} {
-//     @include hover-focus {
-//       background-color: darken($color, 10%) !important;
-//     }
-//   }
-// }
+// Contextual backgrounds
+@mixin bg-variant($parent, $color) {
+  #{$parent} {
+    background-color: $color !important;
+  }
+  a#{$parent},
+  button#{$parent} {
+    @include hover-focus {
+      background-color: darken($color, 10%) !important;
+    }
+  }
+}
 
-// @mixin bg-gradient-variant($parent, $color) {
-//   #{$parent} {
-//     background: linear-gradient(35deg, $color 0) !important;
-//   }
-// }
+@mixin bg-gradient-variant($parent, $color) {
+  #{$parent} {
+    background: linear-gradient(35deg, $color 0) !important;
+  }
+}
 
-// @mixin bg-translucent-variant($parent, $color) {
-//   #{$parent} {
-//     background-color: darken(
-//       rgba($color, $translucent-color-opacity),
-//       7%
-//     ) !important;
-//   }
-//   a#{$parent},
-//   button#{$parent} {
-//     @include hover-focus {
-//       background-color: darken(
-//         rgba($color, $translucent-color-opacity),
-//         12%
-//       ) !important;
-//     }
-//   }
-// }
+@mixin bg-translucent-variant($parent, $color) {
+  #{$parent} {
+    background-color: darken(
+      rgba($color, $translucent-color-opacity),
+      7%
+    ) !important;
+  }
+  a#{$parent},
+  button#{$parent} {
+    @include hover-focus {
+      background-color: darken(
+        rgba($color, $translucent-color-opacity),
+        12%
+      ) !important;
+    }
+  }
+}
